--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "del": "^1.2.1",
+    "gulp": "^3.9.0",
+    "gulp-inject": "^1.5.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-task-listing": "^1.0.1",
+    "yargs": "^3.20.0"
   }
 }
