removed all charset stamps

--- a/web.config
+++ b/web.config
@@ -22,9 +22,9 @@
                 <remove fileExtension=".json" />
                 <mimeMap fileExtension=".json" mimeType="application/json" />
                 <remove fileExtension=".rss" />
-                <mimeMap fileExtension=".rss" mimeType="application/rss+xml; charset=UTF-8" />
+                <mimeMap fileExtension=".rss" mimeType="application/rss+xml" />
                 <remove fileExtension=".xml" />
-                <mimeMap fileExtension=".xml" mimeType="application/xml; charset=UTF-8" />
+                <mimeMap fileExtension=".xml" mimeType="application/xml" />
                 <!-- HTML5 Audio/Video mime types-->
                 <remove fileExtension=".mp3" />
                 <mimeMap fileExtension=".mp3" mimeType="audio/mpeg" />
@@ -78,7 +78,7 @@
                 <remove fileExtension=".cur" />
                 <mimeMap fileExtension=".cur" mimeType="image/x-icon" />
                 <remove fileExtension=".webapp" />
-                <mimeMap fileExtension=".webapp" mimeType="application/x-web-app-manifest+json; charset=UTF-8" />
+                <mimeMap fileExtension=".webapp" mimeType="application/x-web-app-manifest+json" />
             </staticContent>
         </system.webServer>
     </configuration>
